<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/maunen"
    android:padding="40dp"
    tools:context=".activity.TaoTaiKhoanActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_gravity="center"
            android:id="@+id/tvDangKi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strDangKi"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginBottom="50dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginBottom="20dp"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strTenDangNhap">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTenDangNhap"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strHoTen">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edHoTen"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Giới Tính">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edGioiTinh"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strNamSinh"
            app:counterEnabled="true"
            app:counterMaxLength="4"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperTextEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edNamSinh"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="8dp"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strSodienThoai"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edSoDienThoai"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="8dp"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strDiaChi"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDiaChi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strMatKhau"
            app:counterEnabled="true"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edMatKhau"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="50dp"
            android:id="@+id/btnDangKi"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/background_btn_dangnhap"
            android:elevation="3dp"
            android:text="@string/strDangKi"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>