<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F8D4D0"
    tools:context=".activity.DangNhapActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_dn_dk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.85"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/tvDangNhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strDangNhap"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.157" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/strTenDangNhap"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDangNhap"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="8dp"
                android:ems="10"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/strMatKhau"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="#FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="8dp"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="326dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:background="@drawable/background_btn_dangnhap"
            android:elevation="3dp"
            android:text="@string/strDangNhap"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintVertical_bias="0.418"
            app:layout_constraintWidth_percent="0.7" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.175">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bạn chưa có tài khoản?"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvDangKi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Đăng ký"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/id_manChao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1CACA"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="2dp">

        <ImageView
            android:id="@+id/imgheader"
            android:layout_width="match_parent"
            android:layout_height="277dp"
            android:src="@drawable/img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/arialbold"
            android:text="Travenus"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/arialbold"
            android:text="Cùng bạn đi muôn nơi"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/robotolight"
            android:text="Chào mừng bạn đến với travenus,"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/robotolight"
            android:text="bạn đã có tài khoản chưa !"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/robotolight"
            android:text="Bắt đầu tạo tài khoản nhé"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBatDau"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/background_btn_dangnhap"
            android:elevation="3dp"
            android:text="Bắt đầu thôi! ---->"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>